
    + **BUGFIX**: Fixed issue #22 parsing or indeed reserializing of values like ``content: "\\"``

    - **IMPROVEMENT**: Fixed issue #23. The examples/style.py example renderer was reusing ``Property`` objects for each HTML element so they effectively overwrote each other.

    + DOCUMENTATION: Using Sphinx 0.6.1 does seem to mess up the start page of these docs a bit. Need to look into that...


0.9.6a3 090426
    - **IMPROVEMENT**: Fixed ``CSSStyleDeclaration.length`` for Python 2.6.2 (due to a backport from Python 2.7 to 2.6.2 the reversed() iterator has no __length__ anymore which cssutils was using)

    + **BUGFIX**: New version of encutils (0.9) with these fixes:
        - invalid HTML (like ``< />``) does not stop the encoding detection anymore
        - fixed ``tryEncodings`` if chardet is not installed
        - mismatch is ``False`` now if mime-type is ``text/xml`` (or similar) and XML encoding pseudo attribute defines encoding as this is ignored completely!
        - default encoding for CSS is UTF-8 now if not other HTTP info is given. @charset encoding information is **not** used by encutils!
        - log output for mismatch uses ``!=`` instead of ``<>`` now
        - fixed testcases which were not all tested :(most embarrassing)

    + **BUGFIX**: Fixed issue #21 http://code.google.com/p/cssutils/issues/detail?id=21. Definition of valid values for property `background-position` was wrong. Still mixed values like ``background-position: 0 top`` are invalid although most browsers accept them. But the CSS 2.1 spec defines it the above way. CSS3 backgrounds is not implemented yet in cssutils.


0.9.6a2 090308
    + **API CHANGE**: :class:`cssutils.profiles.Profiles` (introduced in 0.9.6a1) has been refactored:

        - ``cssutils.profile`` (a ``cssutils.profiles.Profiles`` object) is now preset and available used for all validation